 - Changed how depth initial values are calculated (fixes SM64DS skybox) [shash] 
 Mac OS X port:
 - Fixed: Filenames and paths with unicode characters now work. [Jeff]
 - Fixed: Load state from file button works again. [Jeff]
 - Save State panel now pauses emulation while the file selection box is open. [Jeff]
 Windows port:
 - Removed the bug report link with a define, to avoid reports from betas/external builds [shash]
 - Added the version on window bar to recognize versions from screenshots [shash]
 
0.7.3 -> 0.8
 Cocoa:
 - Save State As function now works. [Jeff B]
 - Recent Items menu now works. [Jeff B]
 - Opening NDS files from Finder now works. [Jeff B]
 - Added screenshot feature. [Jeff B]
 - Added preferences. [Jeff B]
 - Many more strings are translatable now. [Jeff B]
 - Default screen color is black (better represents being "off" and easier on eyes at night). [Jeff B]
 - Added sound. [Jeff B]
 - Now is a universal binary. [Jeff B]
 - Leopard resolution icon added. [Jeff B]
 - Added a Japanese translation. [Jeff B]
 - Added an optional status bar (resize handle no longer overlaps screen). [Jeff B]
 - New ROM Info and About DeSmuME windows have been added. [Jeff B]
 - Fixed several bugs in window resizing. [Jeff B]
 - Added FAT image support for homebrew games (thanks to TypeError). [Jeff B]
 - Key config can be changed on the command line. Save/load hotkeys changed (so expose doesn't override). [Jeff B]
 - Key bindings may work better on non-US keyboards now (needs testing). [Jeff B]
 general:
 - Encapsulate GDB debug stub to avoid certain problems [shash]
 - Fixed CPU LD*/ST* bugs [shash]
 - Fixed New SMB mini-games freeze [shash]
 - Fixed possible segfault in ROMReader on ia64 and amd64. [evilynux]
 - Fixed a crash bug with 2D background corrupting memory [shash]
 - Flag check optimization [carlo_bramini]
 - Applied some endian fixes in GPU (thanks to Phazz) [Jeff B]
 gtk-glade:
 - Added DeSmuME version in about dialog. [evilynux]